@startuml
'https://plantuml.com/class-diagram

class Solution45 {
}

class FileInput {
    + length : int
    + array : ArrayList<String>

    <<constructor> FileInput(path : String)

    + readFile(path : String): void
    + getArrayLength(arr : ArrayList<String>) : int

}

class FileParser {
    + processArray(a1 : ArrayList<String>) : String[]
    + replace(temp : String[], a2 : String[], size : int, s1 : String, s2 : String) : void
    + convertArrayList(a1 : ArrayList<String>, index : int) : String
}

class FileOutput {
    path : String
    name : String
    array : String[]
    length : int

    <<constructor> FileOutput(path : String, name : String, array : String[], length : int)

    + printOutput() : void
    + getLineString(array : String[], index : int) : String
    + createFile(name : String) : void
}

Solution45 o--> FileOutput
Solution45 o--> FileParser
Solution45 o--> FileInput

@enduml